Se creó con Colab

--- a/CalidadVino.ipynb
+++ b/CalidadVino.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9NqXOolugh0Zmob3G8o/n",
+      "authorship_tag": "ABX9TyN3xJv64dupzKNV94aSJ9fT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
+        "id": "ZXdeIjKZorvH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "id": "ZXdeIjKZorvH",
-        "outputId": "7db33a3c-daaf-482d-fe0c-b8601011ff04"
+        "outputId": "088aceb7-4e47-4dce-bfd4-2c432970c2f9"
       },
       "outputs": [
         {
@@ -65,7 +65,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-50e66241-24bf-4cfb-aedb-0174ad3dfc04\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a963d2ed-f060-43b2-bfde-5845ea1af2b0\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -186,7 +186,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50e66241-24bf-4cfb-aedb-0174ad3dfc04')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a963d2ed-f060-43b2-bfde-5845ea1af2b0')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -238,12 +238,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-50e66241-24bf-4cfb-aedb-0174ad3dfc04 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a963d2ed-f060-43b2-bfde-5845ea1af2b0 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-50e66241-24bf-4cfb-aedb-0174ad3dfc04');\n",
+              "        const element = document.querySelector('#df-a963d2ed-f060-43b2-bfde-5845ea1af2b0');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -263,8 +263,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-aae699a3-d9df-42bb-a368-24b8a3204b27\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aae699a3-d9df-42bb-a368-24b8a3204b27')\"\n",
+              "<div id=\"df-4980ce0e-a955-4265-8ccb-f542cb09034d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4980ce0e-a955-4265-8ccb-f542cb09034d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -383,7 +383,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-aae699a3-d9df-42bb-a368-24b8a3204b27 button');\n",
+              "        document.querySelector('#df-4980ce0e-a955-4265-8ccb-f542cb09034d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -400,7 +400,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 3
         }
       ],
       "source": [
@@ -410,6 +410,29 @@
         "df= pd.read_csv(url,sep=',', header=None)\n",
         "df.head()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Variables incorporadas**\n",
+        "\n",
+        "0. Acidez fija (AF).\n",
+        "1. Acidez volátil (AV).\n",
+        "2. Acidez cítrica (AC).\n",
+        "3. Azúcar residual (AR).\n",
+        "4. Cloruros (CL).\n",
+        "5. Dióxido sulfúrico libre (DSL).\n",
+        "6. Dióxido sulfúrico total (DST)\n",
+        "7. Densidad (DEN).\n",
+        "8. Grado de acidez o alcalinidad (GA).\n",
+        "9. Sulfatos (SUL).\n",
+        "10. Alcohol (ALC).\n",
+        "11. Calidad (CAL).\n",
+        "12. Identificación (ID)."
+      ],
+      "metadata": {
+        "id": "pIYzLfnxvccl"
+      }
     }
   ]
 }
