--- a/CalidadVino.ipynb
+++ b/CalidadVino.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4NKritYgp4xmPbdmNh9se",
+      "authorship_tag": "ABX9TyO7UCdkUqSd6ZoNQdc7HCVE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {
         "id": "ZXdeIjKZorvH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "088aceb7-4e47-4dce-bfd4-2c432970c2f9"
+        "outputId": "4b7f27e1-1862-4b8a-f862-0f5cd24b0414"
       },
       "outputs": [
         {
@@ -65,7 +65,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a963d2ed-f060-43b2-bfde-5845ea1af2b0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7b6c9fe6-d9f7-4ea8-b25b-866b0d439cdd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -186,7 +186,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a963d2ed-f060-43b2-bfde-5845ea1af2b0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7b6c9fe6-d9f7-4ea8-b25b-866b0d439cdd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -238,12 +238,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a963d2ed-f060-43b2-bfde-5845ea1af2b0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7b6c9fe6-d9f7-4ea8-b25b-866b0d439cdd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a963d2ed-f060-43b2-bfde-5845ea1af2b0');\n",
+              "        const element = document.querySelector('#df-7b6c9fe6-d9f7-4ea8-b25b-866b0d439cdd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -263,8 +263,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4980ce0e-a955-4265-8ccb-f542cb09034d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4980ce0e-a955-4265-8ccb-f542cb09034d')\"\n",
+              "<div id=\"df-f874c172-3159-449d-b0d3-56a49cea452e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f874c172-3159-449d-b0d3-56a49cea452e')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -383,7 +383,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4980ce0e-a955-4265-8ccb-f542cb09034d button');\n",
+              "        document.querySelector('#df-f874c172-3159-449d-b0d3-56a49cea452e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -400,7 +400,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 11
         }
       ],
       "source": [
@@ -1294,6 +1294,42 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.isna().sum())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "edm-6v24EWLG",
+        "outputId": "d8fdaf61-51f6-414b-cf5a-7e5510d748ec"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AF     0\n",
+            "AV     0\n",
+            "AC     0\n",
+            "AR     0\n",
+            "CL     0\n",
+            "DSL    0\n",
+            "DST    0\n",
+            "DEN    0\n",
+            "GA     0\n",
+            "SUL    0\n",
+            "ALC    0\n",
+            "CAL    0\n",
+            "ID     0\n",
+            "dtype: int64\n"
+          ]
         }
       ]
     }
