Se creó con Colab

--- a/CalidadVino.ipynb
+++ b/CalidadVino.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLph5JXF9pymZ3sXUvnDkb",
+      "authorship_tag": "ABX9TyPQzsqid8rRloOL7U8+UnQe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1875,6 +1875,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preguntas:\n",
+        "1. ¿Qué aspecto es de mayor impacto en relación a la calidad del vino?\n",
+        "2. ¿La densidad del vino se relaciona directamente con la calidad del mismo?\n",
+        "\n",
+        "H: La calidad del vino se encuentra correlacionada directamente con la combinación de factores que intervinen en su proceso."
+      ],
+      "metadata": {
+        "id": "jaj8TST8Gc6V"
+      }
     }
   ]
 }
