Se creó con Colab

--- a/CalidadVino.ipynb
+++ b/CalidadVino.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQzsqid8rRloOL7U8+UnQe",
+      "authorship_tag": "ABX9TyMRl85an24CK+t4xILhnC05",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1879,11 +1879,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Preguntas:\n",
+        "**Preguntas de análisis:**\n",
+        "\n",
         "1. ¿Qué aspecto es de mayor impacto en relación a la calidad del vino?\n",
         "2. ¿La densidad del vino se relaciona directamente con la calidad del mismo?\n",
         "\n",
-        "H: La calidad del vino se encuentra correlacionada directamente con la combinación de factores que intervinen en su proceso."
+        "**H:** La calidad del vino se encuentra correlacionada directamente con la combinación de factores que intervinen en su proceso."
       ],
       "metadata": {
         "id": "jaj8TST8Gc6V"
