Se creó con Colab

--- a/CalidadVino.ipynb
+++ b/CalidadVino.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoJ9BG+jI9y6+po8GjuTaX",
+      "authorship_tag": "ABX9TyOfbL8yb+i2128x6tD/8NMP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -432,6 +432,19 @@
       ],
       "metadata": {
         "id": "pIYzLfnxvccl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preguntas de análisis:\n",
+        "\n",
+        "1. ¿Qué aspecto es de mayor impacto en relación a la calidad del vino?\n",
+        "2. ¿La acidez del vino se relaciona directamente con la calidad del mismo?\n",
+        "H: La calidad del vino se encuentra correlacionada directamente con la combinación de factores que intervinen en su proceso."
+      ],
+      "metadata": {
+        "id": "i8XxCIWhtXKx"
       }
     },
     {
@@ -1951,20 +1964,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Preguntas de análisis:**\n",
-        "\n",
-        "1. ¿Qué aspecto es de mayor impacto en relación a la calidad del vino?\n",
-        "2. ¿La densidad del vino se relaciona directamente con la calidad del mismo?\n",
-        "\n",
-        "**H:** La calidad del vino se encuentra correlacionada directamente con la combinación de factores que intervinen en su proceso."
-      ],
-      "metadata": {
-        "id": "jaj8TST8Gc6V"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -2147,7 +2146,7 @@
         "ax.set_xlabel('Acidez fijo')\n",
         "ax.set_ylabel('Acidez acumulada (PH.)')\n",
         "ax.set_title('Acidez cítrica')\n",
-        "ax.legend(loc='lower left')\n"
+        "ax.legend()\n"
       ],
       "metadata": {
         "colab": {
@@ -2155,16 +2154,16 @@
           "height": 106
         },
         "id": "v8Af-st2kQM_",
-        "outputId": "2c6f47a9-07a5-4376-c701-71cbb7b9f075"
+        "outputId": "2ed9fc2e-34dc-4c8d-c6df-1b89b6d5af24"
       },
-      "execution_count": 43,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "unmatched ')' (<ipython-input-43-145508e0943d>, line 1)",
+          "evalue": "unmatched ')' (<ipython-input-51-0cfaa9aa4a6a>, line 1)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-145508e0943d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    fig, ax = plt.subplots(figsize=11, 8))\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-0cfaa9aa4a6a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    fig, ax = plt.subplots(figsize=11, 8))\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
           ]
         }
       ]
@@ -2247,9 +2246,9 @@
           "height": 506
         },
         "id": "ln4D-mWbqpKl",
-        "outputId": "253931e7-10b3-4d25-aff3-8d3a2805cb11"
+        "outputId": "fe65326a-c90a-4b9a-b5c5-82f7d988a7cf"
       },
-      "execution_count": 47,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
