--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCVJ+H4uEUqOcJkg4lyfbk",
+      "authorship_tag": "ABX9TyOSxCnznsiwdXm3osNq3fSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -563,6 +563,112 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_archivo.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a30Jrea8me47",
+        "outputId": "bdd0a8fb-5823-4f99-8be3-fcbec6018a3e"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar',\n",
+              "       'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density',\n",
+              "       'pH', 'sulphates', 'alcohol', 'quality'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_archivo.dtypes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1R1MSfkrmkR6",
+        "outputId": "5bc1ebaf-0dcb-4e44-a7ca-c0f40069db19"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "fixed acidity           float64\n",
+              "volatile acidity        float64\n",
+              "citric acid             float64\n",
+              "residual sugar          float64\n",
+              "chlorides               float64\n",
+              "free sulfur dioxide     float64\n",
+              "total sulfur dioxide    float64\n",
+              "density                 float64\n",
+              "pH                      float64\n",
+              "sulphates               float64\n",
+              "alcohol                 float64\n",
+              "quality                   int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_archivo = pd.Series(df_archivo['pH'])\n",
+        "df_archivo"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p_ooBwPMnL_Z",
+        "outputId": "0ecd29d3-b161-4e25-c41b-eac15835d946"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Id\n",
+              "0       3.51\n",
+              "1       3.20\n",
+              "2       3.26\n",
+              "3       3.16\n",
+              "4       3.51\n",
+              "        ... \n",
+              "1592    3.42\n",
+              "1593    3.42\n",
+              "1594    3.45\n",
+              "1595    3.52\n",
+              "1597    3.57\n",
+              "Name: pH, Length: 1143, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
