Se creó con Colab

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKRwWrfA+vJddatuhQCsvB",
+      "authorship_tag": "ABX9TyOOIsss6xCIHO8xqd8MBSkg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,53 +29,58 @@
     {
       "cell_type": "markdown",
       "source": [
-        "TRABAJO FINAL - CODERHOUSE\n",
+        "# Trabajo Final - CODERHOUSE\n",
         "\n",
-        "Carolina Cortez Schall\n",
+        "Alumna: Carolina Cortez Schall\n",
         "\n",
         "COMISION 60935\n",
         "\n",
         "Tema: Calidad del vino\n",
         "\n",
-        "Características en la composición del vino\n",
         "\n",
-        "Abstract\n",
+        "# Características de la composición del vino\n",
+        "\n",
+        "***Abstract ***\n",
         "\n",
         "La producción vitivinícola conlleva una serie de desafíos a tener en cuenta, frente al vertiginoso crecimiento de la comercialización y exportación de vinos de calidad. Por lo cual la calidad se constituye como el objeto de estudio frente a la satisfacción de necesidades y exigencias del público consumidor de vinos.\n",
         "Es de común conocimiento que, la búsqueda de la calidad se relaciona directamente y proporcialmente con el valor económico que implica, así como la demanda que este provoca. El sujeto consumidor realiza una búsqueda y valoración de vinos de calidad, potenciando la exigencia, además de la experticia de quien consume desde un lugar de mayor conocimiento.\n",
         "Por esto mismo, es menester la valoración y análisis frente a las característcias y componentes que son parte de la producción del vino, para el aseguramiento de la calidad del producto final de consumo.\n",
         "\n",
-        "Objetivo\n",
+        "***Objetivo***\n",
         "\n",
         "El objetivo principal de este estudio es identificar y analizar las relaciones entre los niveles de acidez y la calidad del vino, para una mejora del producto final de consumo.\n",
         "\n",
-        "Contexto Comercial\n",
+        "***Contexto Comercial***\n",
         "\n",
         "El mercado vitivinícola se encuentra frente a un crecimiento constante a nivel mundial. La cultura popular y de disfrute en un entorno de experimentar los diversos placeres de la vida, lleva a un consumo mayor del vino como un producto de valor frente al disfrute y la salud.\n",
         "\n",
         "Se trabaja con la información necesaria desde la categorización \"calidad\" de vinos y sus diversos componentes que intervienen en ella, modificándola en relación a su mejora o disminución de calidad del mismo.\n",
         "\n",
-        "Desafío Comercial\n",
+        "***Desafío Comercial***\n",
         "\n",
         "Conocer de qué manera influye los niveles de acidificación en la producción del vino para la obtención de un vino de mayor calidad.\n",
         "\n",
-        "Preguntas de análisis\n",
+        "***Preguntas de análisis***\n",
         "\n",
-        "1. ¿Cómo influye la la acidez vs. la calidad del vino?\n",
+        "1. ¿Cómo influye la la acidez en la calidad del vino?\n",
         "\n",
-        "2. ¿La acidez del vino se relaciona directamente con la calidad del mismo?\n",
+        "2. ¿El ph del vino se relaciona directamente con la calidad del mismo?\n",
         "\n",
         "3. ¿Qué tipo de acidez afecta más la calidad de vino?\n",
         "\n",
-        "4. ¿La acidificación del producto se encuentra relacionado con el PH del vino?\n",
+        "4. La acidez del vino determina la graduación etílica?\n",
         "\n",
-        "Hipótesis\n",
+        "\n",
+        "\n",
+        "***Hipótesis***\n",
         "\n",
         "Tener una mayor acidez provoca mayor calidad del vino.\n",
         "\n",
-        "El PH del vino presenta relación con la calidad del vino.\n",
+        "El ph del vino presenta relación con la calidad del vino.\n",
         "\n",
-        "El nivel etílico se encuentra determinado por la acidez del vino.\n"
+        "El ácido cítrico tiene mayor impacto positivo en la mejora de la calidad del vino.\n",
+        "\n",
+        "La graduación etílica se encuentra determinado por la acidez del vino.\n"
       ],
       "metadata": {
         "id": "kc3-nFPW9gx_"
@@ -8273,11 +8278,11 @@
         "!pip install dtreeviz"
       ],
       "metadata": {
-        "id": "TJyUx8iLmjaM",
-        "outputId": "ba0e6f30-f853-42e9-ed82-4d061c0925de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TJyUx8iLmjaM",
+        "outputId": "ba0e6f30-f853-42e9-ed82-4d061c0925de"
       },
       "execution_count": 14,
       "outputs": [
@@ -8334,12 +8339,12 @@
         "viz"
       ],
       "metadata": {
-        "id": "4xIya7lWm0rp",
-        "outputId": "e6508d4a-dbb6-4bb6-feba-4beac95f59e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        }
+        },
+        "id": "4xIya7lWm0rp",
+        "outputId": "e6508d4a-dbb6-4bb6-feba-4beac95f59e6"
       },
       "execution_count": 16,
       "outputs": [
