Se creó con Colab

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOIsss6xCIHO8xqd8MBSkg",
+      "authorship_tag": "ABX9TyP5MmMgclqXpEwPJkZdRIut",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "\n",
         "# Características de la composición del vino\n",
         "\n",
-        "***Abstract ***\n",
+        "***Resúmen***\n",
         "\n",
         "La producción vitivinícola conlleva una serie de desafíos a tener en cuenta, frente al vertiginoso crecimiento de la comercialización y exportación de vinos de calidad. Por lo cual la calidad se constituye como el objeto de estudio frente a la satisfacción de necesidades y exigencias del público consumidor de vinos.\n",
         "Es de común conocimiento que, la búsqueda de la calidad se relaciona directamente y proporcialmente con el valor económico que implica, así como la demanda que este provoca. El sujeto consumidor realiza una búsqueda y valoración de vinos de calidad, potenciando la exigencia, además de la experticia de quien consume desde un lugar de mayor conocimiento.\n",
@@ -74,13 +74,13 @@
         "\n",
         "***Hipótesis***\n",
         "\n",
-        "Tener una mayor acidez provoca mayor calidad del vino.\n",
+        "1. Tener una mayor acidez provoca mayor calidad del vino.\n",
         "\n",
-        "El ph del vino presenta relación con la calidad del vino.\n",
+        "2. El ph del vino presenta relación con la calidad del vino.\n",
         "\n",
-        "El ácido cítrico tiene mayor impacto positivo en la mejora de la calidad del vino.\n",
+        "3. El ácido cítrico tiene mayor impacto positivo en la mejora de la calidad del vino.\n",
         "\n",
-        "La graduación etílica se encuentra determinado por la acidez del vino.\n"
+        "4. La graduación etílica se encuentra determinado por la acidez del vino.\n"
       ],
       "metadata": {
         "id": "kc3-nFPW9gx_"
