--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIcxOaB6pN2Jo6baBZcaCB",
+      "authorship_tag": "ABX9TyPojCCYh+2EyuMt5atLkW8/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -689,56 +689,71 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Variables incorporadas**\n",
-        "\n",
-        "0. Acidez fija. Conjunto de ácidos naturales del vino que ya hemos visto anteriormente (tartárico, málico, cítrico, succínico y láctico) (AF).\n",
-        "1. Acidez volátil. Cantidad de ácido acético del vino. La medida normal es de 0,3 a 0,6 gramos por litro. Cuanto menor acidez volátil tenga un vino mayor será la calidad. (AV).\n",
-        "2. Acidez cítrica. Es el ácido menos común en el vino, produce una sensación de acidez muy fresca y brillante en el paladar. (AC).\n",
-        "3. Azúcar residual. Es lo que queda después de que las uvas hayan pasado por el proceso de elaboración del vino (AR).\n",
-        "4. Cloruros. Uno de los principales componentes de las sales en el vino son los cloruros, las sales minerales en el vino producen en organismo placer organoléptico, favorecen la hidratación, resalta sabores de los alimentos (mg/L.(CL).\n",
-        "5. Dióxido sulfúrico libre. El SO2 se añade durante la elaboración del vino como conservante, lo que permite obtener vinos con menor oxidación al inhibir la reacción del oxígeno gracias a su capacidad reductora. Esto mejora las propiedades organolépticas del vino, realzando su sabor, color y aroma.(DSL).\n",
-        "6. Dióxido sulfúrico total. El Dióxido de azufre se usa para preservar el color, sabor y estabilidad del vino. Al ser un antimicrobiano, el SO2 interfiere con los caminos metabólicos de la levadura y bacterias. (DST)\n",
-        "7. Densidad. En los vinos, el azúcar se ha transformado en alcohol, cuya densidad es 0,798.(DEN).\n",
-        "8. Grado de acidez o alcalinidad. La mayoría de los vinos tienen un valor de pH entre 3.0 y 4.0. (PH).\n",
-        "9. Sulfatos. Los sulfitos del vino se utilizan para detener la fermentación en un punto específico del proceso de elaboración vinícola. Además, son conservantes que previenen el deterioro y la oxidación, y brindan protección contra las bacterias.(SUL).\n",
-        "10. Alcohol. En el caso de los vinos, cabe destacar que, según indica la legislación vigente, su graduación mínima será de 9% vol (ALC).\n",
-        "11. Calidad. Combinación de los componentes anteriores (CAL).\n",
-        "12. Identificación (ID)."
+        "# Descripción de variables incorporadas"
       ],
       "metadata": {
-        "id": "pIYzLfnxvccl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "66Y66G9LBYeo"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "dZCj2v1k27q7"
+        "id": "-hqT2SidMN-B"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Preguntas de análisis:\n",
+        "**Variables incorporadas - Conceptualización**\n",
         "\n",
-        "1. ¿Cómo influye la la acidez vs. la calidad del vino?\n",
-        "2. ¿La acidez del vino se relaciona directamente con la calidad del mismo?\n",
-        "3. ¿Qué tipo de acidez afecta más la calidad de vino?\n",
-        "4. ¿La acidificación del producto se encuentra relacionado con el PH del vino?\n",
+        "0. ***Acidez Fija***\n",
         "\n",
-        "H: Tener una mayor acidez provoca mayor calidad del vino.\n",
-        "H1: El PH del vino presenta relación con la calidad del vino.\n",
-        "H2: El nivel etílico se encuentra determinado por la acidez del vino."
+        "Conjunto de ácidos naturales del vino que ya hemos visto anteriormente (tartárico, málico, cítrico, succínico y láctico) (AF).\n",
+        "\n",
+        "1. ***Acidez Volátil***\n",
+        "\n",
+        "Cantidad de ácido acético del vino. La medida normal es de 0,3 a 0,6 gramos por litro. Cuanto menor acidez volátil tenga un vino mayor será la calidad (AV).\n",
+        "\n",
+        "2. ***Acidez Cítrica***\n",
+        "\n",
+        "Es el ácido menos común en el vino, produce una sensación de acidez muy fresca y brillante en el paladar (AC).\n",
+        "\n",
+        "3. ***Azúcar Residual***\n",
+        "\n",
+        "Es lo que queda después de que las uvas hayan pasado por el proceso de elaboración del vino (AR).\n",
+        "\n",
+        "4. ***Cloruros***\n",
+        "\n",
+        "Uno de los principales componentes de las sales en el vino son los cloruros, las sales minerales en el vino producen en organismo placer organoléptico, favorecen la hidratación, resalta sabores de los alimentos (mg/L.(CL).\n",
+        "\n",
+        "5. ***Dióxido Sulfúrico Libre***\n",
+        "\n",
+        "El SO2 se añade durante la elaboración del vino como conservante, lo que permite obtener vinos con menor oxidación al inhibir la reacción del oxígeno gracias a su capacidad reductora. Esto mejora las propiedades organolépticas del vino, realzando su sabor, color y aroma(DSL).\n",
+        "\n",
+        "6. ***Dióxido Sulfúrico Total***\n",
+        "\n",
+        "El Dióxido de azufre se usa para preservar el color, sabor y estabilidad del vino. Al ser un antimicrobiano, el SO2 interfiere con los caminos metabólicos de la levadura y bacterias (DST).\n",
+        "\n",
+        "7. ***Densidad***\n",
+        "\n",
+        "En los vinos, el azúcar se ha transformado en alcohol, cuya densidad es 0,798 (DEN).\n",
+        "\n",
+        "8. ***Grado de acidez o alcalinidad***\n",
+        "\n",
+        "La mayoría de los vinos tienen un valor de pH entre 3.0 y 4.0 (PH).\n",
+        "\n",
+        "9. ***Sulfatos***\n",
+        "\n",
+        "Los sulfitos del vino se utilizan para detener la fermentación en un punto específico del proceso de elaboración vinícola. Además, son conservantes que previenen el deterioro y la oxidación, y brindan protección contra las bacterias (SUL).\n",
+        "\n",
+        "10. ***Alcohol***\n",
+        "\n",
+        "En el caso de los vinos, cabe destacar que, según indica la legislación vigente, su graduación mínima será de 9% vol (ALC).\n",
+        "\n",
+        "11. ***Calidad***\n",
+        "\n",
+        "Combinación de los componentes anteriores (CAL).\n",
+        "\n",
+        "12. ***Identificación***\n",
+        "\n",
+        "Identificador del producto analizado en sus componentes (ID)."
       ],
       "metadata": {
-        "id": "i8XxCIWhtXKx"
+        "id": "pIYzLfnxvccl"
       }
     },
     {
@@ -825,6 +840,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Se desea conocer el tamaño de la base de datos\n",
         "df.shape"
       ],
       "metadata": {
@@ -832,9 +848,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "diidKvUh1IiF",
-        "outputId": "e398c022-037c-4f12-f18a-37e9943baec5"
+        "outputId": "4e5d0668-093d-4fe1-d806-71487bf41c3f"
       },
-      "execution_count": 15,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +860,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 38
         }
       ]
     },
