Se creó con Colab

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPojCCYh+2EyuMt5atLkW8/",
+      "authorship_tag": "ABX9TyOT2leq6Jam/leMpFad/Lik",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -759,6 +759,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Información sobre el tipo de datos de las columnas\n",
         "df.info()"
       ],
       "metadata": {
@@ -766,9 +767,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZUkbYayi06OW",
-        "outputId": "9fd9544a-41a7-4551-e300-5ae7b3d858c6"
+        "outputId": "ada61234-3d9a-4dfb-fadb-4f1d3e2cb32c"
       },
-      "execution_count": 13,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,6 +795,71 @@
             " 12  12      1144 non-null   object\n",
             "dtypes: object(13)\n",
             "memory usage: 116.3+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A partir de la información aportada, puede conocerse las 12 columnas con tipos de datos \"object\", los cuales transformaremos en \"categóricos para un mejor cruce de los mismos."
+      ],
+      "metadata": {
+        "id": "0DR0C2CiScVx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Conversión de columnas en tipo de datos categóricos\n",
+        "category_indexes = [0,1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "df[df.columns[category_indexes]] = df[df.columns[category_indexes]].astype('category')"
+      ],
+      "metadata": {
+        "id": "7EXaXiUCR4f9"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Resultado del cambio\n",
+        "df.info()"
+      ],
+      "metadata": {
+        "id": "XhVN5wVySQSL",
+        "outputId": "026b9034-e6a9-4b41-c195-839b8868366d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1144 entries, 0 to 1143\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column  Non-Null Count  Dtype   \n",
+            "---  ------  --------------  -----   \n",
+            " 0   0       1144 non-null   category\n",
+            " 1   1       1144 non-null   category\n",
+            " 2   2       1144 non-null   category\n",
+            " 3   3       1144 non-null   category\n",
+            " 4   4       1144 non-null   category\n",
+            " 5   5       1144 non-null   category\n",
+            " 6   6       1144 non-null   category\n",
+            " 7   7       1144 non-null   category\n",
+            " 8   8       1144 non-null   category\n",
+            " 9   9       1144 non-null   category\n",
+            " 10  10      1144 non-null   category\n",
+            " 11  11      1144 non-null   category\n",
+            " 12  12      1144 non-null   category\n",
+            "dtypes: category(13)\n",
+            "memory usage: 107.0 KB\n"
           ]
         }
       ]
@@ -840,7 +906,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Se desea conocer el tamaño de la base de datos\n",
+        "# Tamaño de la base de datos\n",
         "df.shape"
       ],
       "metadata": {
@@ -867,6 +933,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Columnas de la base de datos\n",
         "df.columns"
       ],
       "metadata": {
@@ -874,9 +941,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a30Jrea8me47",
-        "outputId": "50ddb0f3-88d7-4ec6-d356-eb2b1b2f3a00"
+        "outputId": "df2fc142-dddb-4884-8e77-c8077d85e7f5"
       },
-      "execution_count": 16,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +953,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 39
         }
       ]
     },
